--- a/index.html
+++ b/index.html
@@ -411,19 +411,18 @@
 
     <!-- Confirmation section -->
     <section class="confirmation" id="confirmation" style="display: none;">
-      <h2 style="font-size: clamp(24px, 3.5vw, 36px); margin: 20px 0;">Pakka bbg?</h2>
+      <h2 style="font-size: clamp(24px, 3.5vw, 36px); margin: 20px 0;">pakka bbg?</h2>
       <div class="button-zone" id="confirmZone">
         <button id="confirmYesBtn">Yes</button>
         <button id="confirmNoBtn">No</button>
       </div>
       <div class="button-zone-single" id="confirmZoneSingle" style="display: none; text-align: center;">
-        <button id="nahiBtn" style="position: static; transform: none; margin: 0 auto; display: block;">NAHII</button>
+        <button id="nahiBtn" style="position: static; transform: none; margin: 0 auto; display: block;">NAHI</button>
       </div>
     </section>
 
     <section class="result" id="result">
-      <h2>YAYYYYYYYYYY</h2>
-      <h3>wooohooooo</h3>
+      <h2>YAYYYYYYYYYYYYYY</h2>
       <div class="heart-icon">💗</div>
     </section>
   </main>
