--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
     <!-- Confirmation section -->
     <section class="confirmation" id="confirmation" style="display: none;">
-      <h2 style="font-size: clamp(24px, 3.5vw, 36px); margin: 20px 0;">pakka bbg?</h2>
+      <h2 style="font-size: clamp(24px, 3.5vw, 36px); margin: 20px 0;">Pakka bbg?</h2>
       <div class="button-zone" id="confirmZone">
         <button id="confirmYesBtn">Yes</button>
         <button id="confirmNoBtn">No</button>
@@ -422,7 +422,7 @@
     </section>
 
     <section class="result" id="result">
-      <h2>YAYYYYYYYYYYYYYY</h2>
+      <h2>YAYYYYYY wohoooo</h2>
       <div class="heart-icon">💗</div>
     </section>
   </main>
@@ -627,7 +627,7 @@
         confirmZoneSingle.style.display = "none";
       } else {
         // If NO was clicked, show sad emoji and only NAHI button
-        catArt.innerHTML = '<div style="font-size: 120px; text-align: center; margin: 20px 0;">😢</div>';
+        catArt.innerHTML = '<div style="font-size: 120px; text-align: center; margin: 20px 0;">😔</div>';
         catArt.classList.remove("hidden");
         confirmZone.style.display = "none";
         confirmZoneSingle.style.display = "block";
@@ -725,3 +725,4 @@
   </script>
 </body>
 </html>
+
